--- a/Train_withFGM.ipynb
+++ b/Train_withFGM.ipynb
@@ -423,12 +423,6 @@
         "                train_images_path.append(img_path)\n",
         "                train_images_label.append(image_class)\n",
         "\n",
-        "    print(\"{} images were found in the dataset.\".format(sum(every_class_num)))\n",
-        "    print(\"{} images for training.\".format(len(train_images_path)))\n",
-        "    print(\"{} images for validation.\".format(len(val_images_path)))\n",
-        "    assert len(train_images_path) > 0, \"number of training images must greater than 0.\"\n",
-        "    assert len(val_images_path) > 0, \"number of validation images must greater than 0.\"\n",
-        "\n",
         "    return train_images_path, train_images_label, val_images_path, val_images_label"
       ]
     },
@@ -442,18 +436,6 @@
         "id": "7Pp1jOtoTSkM",
         "outputId": "c1a34281-7756-4803-cf6b-294039ea2d24"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3670 images were found in the dataset.\n",
-            "2939 images for training.\n",
-            "731 images for validation.\n",
-            "Using 2 dataloader workers every process\n"
-          ]
-        }
-      ],
       "source": [
         "import os\n",
         "import math\n",
@@ -463,15 +445,16 @@
         "import torch.optim as optim\n",
         "\n",
         "train_images_path, train_images_label, val_images_path, val_images_label = read_split_data(\"./data/flower_photos\")\n",
+        "std = [0.5, 0.5, 0.5]\n",
         "data_transform = {\n",
         "    \"train\": transforms.Compose([transforms.RandomResizedCrop(300),\n",
         "         transforms.RandomHorizontalFlip(),\n",
         "         transforms.ToTensor(),\n",
-        "         transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])]),\n",
+        "         transforms.Normalize(std, std)]),\n",
         "    \"val\": transforms.Compose([transforms.Resize(384),\n",
         "        transforms.CenterCrop(384),\n",
         "        transforms.ToTensor(),\n",
-        "        transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])])}\n",
+        "        transforms.Normalize(std, std)])}\n",
         "\n",
         "train_dataset = MyDataSet(images_path = train_images_path,images_class = train_images_label,transform=data_transform[\"train\"])\n",
         "\n",
@@ -479,21 +462,18 @@
         "                            images_class=val_images_label,\n",
         "                            transform=data_transform[\"val\"])\n",
         "\n",
-        "batch_size = 8\n",
-        "nw = min([os.cpu_count(), batch_size if batch_size > 1 else 0, 8])  # number of workers\n",
-        "print('Using {} dataloader workers every process'.format(nw))\n",
         "train_loader = torch.utils.data.DataLoader(train_dataset,\n",
-        "                                               batch_size=batch_size,\n",
+        "                                               batch_size=8,\n",
         "                                               shuffle=True,\n",
         "                                               pin_memory=True,\n",
-        "                                               num_workers=nw,\n",
+        "                                               num_workers=2,\n",
         "                                               collate_fn=train_dataset.collate_fn)\n",
         "\n",
         "val_loader = torch.utils.data.DataLoader(val_dataset,\n",
-        "                                             batch_size=batch_size,\n",
+        "                                             batch_size=8,\n",
         "                                             shuffle=False,\n",
         "                                             pin_memory=True,\n",
-        "                                             num_workers=nw,\n",
+        "                                             num_workers=2,\n",
         "                                             collate_fn=val_dataset.collate_fn)"
       ]
     },
